storage functions and timer page basic layout

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <button class="sidebar-btn">Learn</button>
         <button class="sidebar-btn">Practice</button>
         <button class="sidebar-btn">Analyze</button>
+        <div class="separator"></div>
+        <button class="sidebar-btn">Settings</button>
     </div>
     <div class="main">
         <iframe class="main-display" id="page-container"></iframe>
     </div>
     <script src="sidebar.js"></script>
+    <script src="storage.js"></script>
 </body>
 
 </html>
