--- a/timer.html
+++ b/timer.html
@@ -118,7 +118,7 @@
 </head>
 
 <body>
-    <div class="timer-container"><span class="timer-text">0.00</span></div>
+    <div class="timer-container"><span class="timer-text" id="timer-counter">0.00</span></div>
 
     <div class="table-card">
         <div class="card-header">
