basic timer logic

--- a/timer.html
+++ b/timer.html
@@ -34,6 +34,7 @@
             flex-direction: column;
             font-family: system-ui, -apple-system;
             background-color: #151922;
+            margin: auto;
         }
 
         /* Header */
@@ -118,7 +119,7 @@
 </head>
 
 <body>
-    <div class="timer-container"><span class="timer-text" id="timer-counter">0.00</span></div>
+    <div class="timer-container"><span class="timer-text" id="timer-counter">0.000</span></div>
 
     <div class="table-card">
         <div class="card-header">
